--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "modules/cFileSystemItem"]
 	path = modules/cFileSystemItem
 	url = https://github.com/SkyLined/cFileSystemItem/
+[submodule "modules/mProductDetails"]
+	path = modules/mProductDetails
+	url = https://github.com/SkyLined/mProductDetails/
