--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "modules/mDateTime"]
 	path = modules/mDateTime
 	url = https://github.com/SkyLined/mDateTime/
+[submodule "modules/fsBytesToHumanReadableString"]
+	path = modules/fsBytesToHumanReadableString
+	url = https://github.com/SkyLined/fsBytesToHumanReadableString/
