--- a/.gitmodules
+++ b/.gitmodules
@@ -1,36 +1,27 @@
-[submodule "modules/cFileSystemItem"]
-	path = modules/cFileSystemItem
-	url = https://github.com/SkyLined/cFileSystemItem/
-[submodule "modules/mProductDetails"]
-	path = modules/mProductDetails
-	url = https://github.com/SkyLined/mProductDetails/
-[submodule "modules/mWindowsAPI"]
-	path = modules/mWindowsAPI
-	url = https://github.com/SkyLined/mWindowsAPI/
-[submodule "modules/mWindowsSDK"]
-	path = modules/mWindowsSDK
-	url = https://github.com/SkyLined/mWindowsSDK/
-[submodule "modules/oConsole"]
-	path = modules/oConsole
-	url = https://github.com/SkyLined/oConsole/
-[submodule "modules/mRegistry"]
-	path = modules/mRegistry
-	url = https://github.com/SkyLined/mRegistry/
-[submodule "modules/mDateTime"]
-	path = modules/mDateTime
-	url = https://github.com/SkyLined/mDateTime/
-[submodule "modules/fsBytesToHumanReadableString"]
-	path = modules/fsBytesToHumanReadableString
-	url = https://github.com/SkyLined/fsBytesToHumanReadableString/
-[submodule "modules/mHumanReadable"]
-	path = modules/mHumanReadable
-	url = https://github.com/SkyLined/mHumanReadable/
-[submodule "modules/mNotProvided"]
-	path = modules/mNotProvided
-	url = https://github.com/SkyLined/mNotProvided
-[submodule "modules/mFileSystemItem"]
-	path = modules/mFileSystemItem
-	url = https://github.com/SkyLined/mFileSystemItem
 [submodule "modules/mConsole"]
 	path = modules/mConsole
 	url = https://github.com/SkyLined/mConsole
+[submodule "modules/mDateTime"]
+	path = modules/mDateTime
+	url = https://github.com/SkyLined/mDateTime
+[submodule "modules/mFileSystemItem"]
+	path = modules/mFileSystemItem
+	url = https://github.com/SkyLined/mFileSystemItem
+[submodule "modules/mHumanReadable"]
+	path = modules/mHumanReadable
+	url = https://github.com/SkyLined/mHumanReadable
+[submodule "modules/mNotProvided"]
+	path = modules/mNotProvided
+	url = https://github.com/SkyLined/mNotProvided
+[submodule "modules/mProductDetails"]
+	path = modules/mProductDetails
+	url = https://github.com/SkyLined/mProductDetails
+[submodule "modules/mRegistry"]
+	path = modules/mRegistry
+	url = https://github.com/SkyLined/mRegistry
+[submodule "modules/mWindowsAPI"]
+	path = modules/mWindowsAPI
+	url = https://github.com/SkyLined/mWindowsAPI
+[submodule "modules/mWindowsSDK"]
+	path = modules/mWindowsSDK
+	url = https://github.com/SkyLined/mWindowsSDK
